--- a/app/views/buses/index.html.erb
+++ b/app/views/buses/index.html.erb
@@ -7,133 +7,110 @@
     		Home
     	</a>
     </div>
-    <div class="header-border border_position"></div>
-    <div><h4><u>please hover your mouse respected city/village name to find bus timings</u></h4></div>
-	
+<div class="header-border border_position"></div>
     <div class="row">
-    	<div class="col-sm-6 col-xs-12">
+    <div class="col-sm-12">
+    	<div class="col-sm-6">
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="Dailly 6:30 to 20:30 after 30 min each" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData1"><h3>* Mysore</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Mysore</h3>
+                <h4>Dailly 6:30 to 20:30 after 30 min each</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Badarahalli  :-  Dailly 6:30 to 20:30 after 30 min each " style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Mandya</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Mandya</h3>
+                <h4>via Badarahalli  :-  Dailly 6:30 to 20:30 after 30 min each</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="
-    			via Nagamangala  :-  5:45, 6:35, 7:00, 7:30, 8:00, 8:15, 8:40, 9:00, 9:10, 9:30, 10:00, 10:30, 11:00, 11:15, 11:30, 11:45, 12:00, 12:15, 12:30, 12:50, 13:10, 13:30, 14:00, 14:50, 15:00, 15:15, 15:45, 16:00, 16:30, 17:00, 17:35, 18:00, 18:45" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* Tumukuru</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Tumukuru</h3>
+                <h4>via Nagamangala  :-  5:45, 6:35, 7:00, 7:30, 8:00, 8:15, 8:40, 9:00, 9:10, 9:30, 10:00, 10:30, 11:00, 11:15, 11:30, 11:45, 12:00, 12:15, 12:30, 12:50, 13:10, 13:30, 14:00, 14:50, 15:00, 15:15, 15:45, 16:00, 16:30, 17:00, 17:35, 18:00, 18:45</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via elekere  :-  Dailly 6:15 to 21:30 after 40 min each " style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* K R pate</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* K R pate</h3>
+                <h4>via elekere  :-  Dailly 6:15 to 21:30 after 40 min each</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via K R pate  :-  10:00, 10:30, 10:45, 14:15, 14:30 " style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData5"><h3>* Shivamogga</h3></a>
+    			<h3 class="place-colour-bus">* Shivamogga</h3>
+                <h4>via K R pate  :-  10:00, 10:30, 10:45, 14:15, 14:30</h4>
     			</div>
+    		<div class="form-group">
+    			<h3 class="place-colour-bus">* Thuruvekere</h3>
+                <h4>via Nagamangala :- 12:30, 13:05, 14:05, 14:15, 18:45.</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Nagamangala :- 12:30, 13:05, 14:05, 14:15, 18:45." style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Thuruvekere</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Chicka magaluru</h3>
+                <h4>7:15, 7:40, 8:40.</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="7:15, 7:40, 8:40." style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Chicka magaluru</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Shambonahalli</h3>
+                <h4>via Sunkathonnur, Narahalli :- 7:15, 16:30</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Sunkathonnur, Narahalli :- 7:15, 16:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Shambonahalli</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Kaveripura</h3>
+                <h4>via Anthanahalli :- 7:15, 6:30</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Anthanahalli :- 7:15, 6:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Kaveripura</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Anthanahalli</h3>
+                <h4>7:45, 16:30</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="7:45, 16:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData2"><h3>* Anthanahalli</h3></a>
-    			</div>
-    		</div>
-    		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="7:00, 10:45, 18:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* Kyathanahalli</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Kyathanahalli</h3>
+                <h4>7:00, 10:45, 18:00</h4>
     		</div>
     	</div>
-    	<div class="col-sm-6 col-xs-12">
+    	<div class="col-sm-6">
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="6:30, 7:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* Mahadeshwara Hill</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Mahadeshwara Hill</h3>
+                <h4>6:30, 7:30</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="21:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* K R S</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* K R S</h3>
+                <h4>21:00</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="19:30" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* K R Nagara</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* K R Nagara</h3>
+                <h4>19:30</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Jakkanahalli :- 8:15, 16:45, 19:15, 21:05" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData3"><h3>* Melukote</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Melukote</h3>
+                <h4>via Jakkanahalli :- 8:15, 16:45, 19:15, 21:05</h4>
     		</div>
 
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Eregowdanahalli, Kodala, Kerethonnur :- 6:45, 7:45, 11:00, 13:00, 15:00, 16:45, 17:45, 19:45" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* Narayanapura</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Narayanapura</h3>
+                <h4>via Eregowdanahalli, Kodala, Kerethonnur :- 6:45, 7:45, 11:00, 13:00, 15:00, 16:45, 17:45, 19:45</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Senaba, Kerethonnur :- 7:35, 09:30, 14:30, 17:30, 22:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* Kamanayakanahalli</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Kamanayakanahalli</h3>
+                <h4>via Senaba, Kerethonnur :- 7:35, 09:30, 14:30, 17:30, 22:00</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Deshvalli, Chandre :- 7:30, 13:45, 16:45" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* Pattanagere</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Pattanagere</h3>
+                <h4>via Deshvalli, Chandre :- 7:30, 13:45, 16:45</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Kodala :- 7:30, 10:00, 15:00, 17:00
-    			via Vaddarahalli :- 8:45, 14:10, 17:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* Chittanahalli</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Chittanahalli</h3>
+                <h4>via Kodala :- 7:30, 10:00, 15:00, 17:00
+                    via Vaddarahalli :- 8:45, 14:10, 17:00</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Chikkamarali, Chikade :- 7:45, 13:00, 17:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData4"><h3>* Nuggahalli</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Nuggahalli</h3>
+                <h4>via Chikkamarali, Chikade :- 7:45, 13:00, 17:00</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Dinka, Bannagadi :-7:30, 12:00, 14:30, 17:15" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData5"><h3>* Malligere</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Malligere</h3>
+                <h4>via Dinka, Bannagadi :-7:30, 12:00, 14:30, 17:15</h4>
     		</div>
     		<div class="form-group">
-    			<div class="col-sm-12">
-    			<a data-trigger="hover" data-placement="bottom" data-content="via Elekere, Haralakuppe :-9:15, 13:15, 16:00" style="text-align: justify;font-size: 14px;color: #54789a" class="popoverData5"><h3>* Syadanahalli, Bebi</h3></a>
-    			</div>
+    			<h3 class="place-colour-bus">* Syadanahalli, Bebi</h3>
+                <h4>via Elekere, Haralakuppe :-9:15, 13:15, 16:00</h4>
     		</div>
+        </div>
     	</div>
     </div></br></br>
     	<%= render :partial => 'footer' %></br></br>
