--- a/app/views/mysoretrains/_index_form.html.erb
+++ b/app/views/mysoretrains/_index_form.html.erb
@@ -11,7 +11,7 @@
 					<th class="date">Train Name</th>
 					<th class="name">Arraives</th>
 					<th class="name">Departure</th>
-					<th class="name">Stop Time</th>
+					<th class="name">Traval Time</th>
 					<th class="name">Days</th>
 					<%# if current_user.has_role? :admin %>
 					<!-- <th class="action">Action</th> -->
