--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -17,11 +17,11 @@
 	<%# end %>
 	<ul class="nav nav-tabs" id="myTab">
         <li class="active">
-          <a href="<%= trains_path %>" class="ui-tabs-anchor" id="preference_required_field">Pandavapura - Bangalure</a>
+          <a href="<%= trains_path %>" class="ui-tabs-anchor footer-link-color" id="preference_required_field">Pandavapura - Bangalure</a>
         </li>
         <li class="">
           <a href="<%= mysoretrains_path %>" data-remote="true"
-             class="ui-tabs-anchor" id="preference_edit_favorite">Pandavapura - Mysore</a>
+             class="ui-tabs-anchor footer-link-color" id="preference_edit_favorite">Pandavapura - Mysore</a>
         </li>
         </ul>
     <div class="testing_ajax">
@@ -34,7 +34,7 @@
 					<th class="date">Train Name</th>
 					<th class="name">Arraives</th>
 					<th class="name">Departure</th>
-					<th class="name">Stop Time</th>
+					<th class="name">Traval Time</th>
 					<th class="name">Days</th>
 					<%# if current_user.has_role? :admin %>
 					<!-- <th class="action">Action</th> -->
