--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,13 +3,13 @@
   <div class="footer-border">
     <div class="row">
       <div class="col-lg-2 col-md-2 col-sm-2  padding-right-none padding-right-none">
-        <div class="footer-links"><a href='<%= about_us_path %>'>About</a></div>
-        <div class="footer-links"><a href='<%= contact_path %>'>Contact Us </a></div>
+        <div class="footer-links"><a class=" footer-link-color" href='<%= about_us_path %>'>About</a></div>
+        <div class="footer-links"><a class=" footer-link-color" href='<%= contact_path %>'>Contact Us </a></div>
       </div>
       
       <div class="col-lg-2 col-md-2 col-sm-2  mob-paddingleft padding-right-none">
-        <div class="footer-links"><a href='/information' data-remote = true>Information</a></div>
-        <div class="footer-links"><a href='/galary'>Gallery</a> </div>
+        <div class="footer-links"><a href='/information' class=" footer-link-color" data-remote = true>Information</a></div>
+        <div class="footer-links"><a class=" footer-link-color" href='/galary'>Gallery</a> </div>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-2  padding-left-none">
         <div class="footer-links"><a href="#">&nbsp;</a> </div>
