fixes some bugs in home page and also pagination

--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- preloader -->
-    <div id="preloader">
+    <div id="preloader" style="display: none!important;">
       <img src="assets/preloader.gif" alt="Preloader">
     </div>
     <!-- end preloader -->
