--- a/app/views/home_page/about_us.html.erb
+++ b/app/views/home_page/about_us.html.erb
@@ -4,7 +4,7 @@
         <h2>About Pandavapura</h2>
 	<!-- <h1>Namma Pandavapura</h1> -->
     <div class="new_villade_position">
-        <a class="btn btn-primary" href="<%= root_path %>" type="cancel">
+        <a class="btn btn-primary" href="<%= root_path %>" onclick="window.location.href='/'" type="cancel">
             Home
         </a>
     </div>
