--- a/app/views/home_page/contact.html.erb
+++ b/app/views/home_page/contact.html.erb
@@ -3,7 +3,7 @@
 <!-- <h1>Namma Pandavapura</h1> -->
 <h2>Contact Us </h2>
     <div class="new_villade_position">
-      <a class="btn btn-primary" href="/" type="cancel">
+      <a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
         Home
       </a>
     </div>
