--- a/app/views/home_page/information.html.erb
+++ b/app/views/home_page/information.html.erb
@@ -4,7 +4,7 @@
 		<!-- <h1>Namma Pandavapura</h1> -->
 		<h2>Elected Representatives</h2>
 		<div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
+    	<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
     		Home
     	</a>
     </div>
