--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -9,7 +9,7 @@
 	</div> -->
 	<h2>List of Hospital</h2>
 	<div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
+    	<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
     		Home
     	</a>
     </div>
@@ -44,7 +44,7 @@
 			<% end %>
 		</tbody>
 	</table>
-	<div><a class="btn btn-primary" href="/" type="cancel">
+	<div><a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
 		Back
 	</a></div></br>
 	<!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
