--- a/app/views/schools/_index_form.html.erb
+++ b/app/views/schools/_index_form.html.erb
@@ -27,7 +27,7 @@
 			<%# end %>
 		</tbody>
 	</table>
-	<div><a class="btn btn-primary" href="/" type="cancel">
+	<div><a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
 		Back
 	</a></div></br>
 	<!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
