--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -9,7 +9,7 @@
 	</div> -->
 	<h2>List of Schools in City</h2>
 	<div class="new_villade_position">
-    	<a class="btn btn-primary refresh" href="/" >
+    	<a class="btn btn-primary refresh" href="/" onclick="window.location.href='/'" >
     		Home
     	</a>
     </div>
