--- a/app/views/villages/index.html.erb
+++ b/app/views/villages/index.html.erb
@@ -11,7 +11,7 @@
         </a>
       </div> -->
       <div class="new_villade_position">
-      <a class="btn btn-primary" href="/" type="cancel">
+      <a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
         Home
       </a>
     </div>
@@ -73,7 +73,7 @@
 <%= paginate @village %>
 </div><br>
 <div>
-<a class="btn btn-primary" href="/" type="cancel">
+<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
     Back
 </a></div></br>
 <!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
