--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -21,7 +21,7 @@
               <li><a href="<%= about_us_path %>">About</a></li>
               <li><a href="<%= contact_path %>">Contact</a></li>
               <li><a href="<%= villages_path %>">List of Villages</a></li>
-              <li><a href="/galary">Gallery</a></li>
+              <li><a onclick="window.location.href='/galary'">Gallery</a></li>
               <li><a href="/information">Information</a></li>
               <!-- <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
