--- a/app/views/buses/index.html.erb
+++ b/app/views/buses/index.html.erb
@@ -3,7 +3,7 @@
 
 	<h2>Bus timings in Pandavapura</h2>
 	<div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
+    	<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
     		Home
     	</a>
     </div>
