--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -3,7 +3,7 @@
 <!-- <h1>Namma Pandavapura</h1> -->
 	<h2>List of Offices in City</h2>
 	<div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
+    	<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
     		Home
     	</a>
     </div>
@@ -47,7 +47,7 @@
 	</div>
 	<div class="row journal-entry-devider"> </div>
 	<% end %>
-	<a class="btn btn-primary" href="/" type="cancel">
+	<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
 		Back
 	</a>
 	<a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
