--- a/app/views/tourist_places/index.html.erb
+++ b/app/views/tourist_places/index.html.erb
@@ -9,7 +9,7 @@
 	</div> -->
 	<h2>List of Tourist Places</h2>
 	<div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
+    	<a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
     		Home
     	</a>
     </div>
@@ -47,7 +47,7 @@
 	</div>
 	<div class="row journal-entry-devider"> </div>
 	<% end %>
-	<div><a class="btn btn-primary" href="/" type="cancel">
+	<div><a class="btn btn-primary" href="/" onclick="window.location.href='/'" type="cancel">
 		Back
 	</a>
 	<a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
