--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -68,7 +68,7 @@
         <div class="carousel-inner" role="listbox">
           
           <!-- single slide -->
-          <div class="item active" style="background-image: url(assets/DSC00067.JPG);">
+          <div class="item active" style="background-image: image-url(assets/DSC00067.JPG);">
             <div class="carousel-caption">
               <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Namma<span> Pandavapura</span>!</h2>
               <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">Town</span> of sugar.</h3>
@@ -79,7 +79,7 @@
           <!-- end single slide -->
           
           <!-- single slide -->
-          <div class="item" style="background-image: url(assets/travel-kunti-betta2.jpg);">
+          <div class="item" style="background-image: image-url(assets/travel-kunti-betta2.jpg);">
             <div class="carousel-caption">
               <h2 data-wow-duration="500ms" data-wow-delay="500ms" class="wow bounceInDown animated">Namma<span> Pandavapura</span>!</h2>
               <h3 data-wow-duration="500ms" class="wow slideInLeft animated"><span class="color">Town</span> of peace.</h3>
