--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -166,6 +166,8 @@
 
    
     <script>
+    var $= jQuery.noConflict();
+    
       var wow = new WOW ({
         boxClass:     'wow',      // animated element css class (default is wow)
         animateClass: 'animated', // animation css class (default is animated)
